--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "image-gallary-practice",
+  "name": "image-gallery-practice",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-image-gallery": "^1.0.8",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
